# ai-economics-cockpit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
ai_economics_cockpit/: __init__.py  cli.py  config.py  db.py
ai_economics_cockpit/ingest/: events.py  manual.py  official_pricing.py  sec_filings.py
ai_economics_cockpit/scoring/: confidence.py  normalize.py  score.py
ai_economics_cockpit/validate/: rules.py  schemas.py
artifacts/: latest_dashboard_build_report.md
config/: falsification.yaml  metric_catalog.yaml  scoring.yaml  sec_companies.yaml  source_registry.yaml  token_pricing.yaml
dashboard/: index.html
dashboard/assets/: dashboard.css  dashboard.js
data/manual/: ai_budget_events.csv  capex_estimates.csv  enterprise_roi_observations.csv  gpu_rental_rates.csv  gpu_resale_prices.csv  model_lab_financials.csv  private_valuations.csv
scripts/: build_dashboard.py  run_e2e.py  validate_sources.py
tests/: test_confidence_weighting.py  test_idempotent_build.py  test_manual_csv_schemas.py  test_metric_catalog_schema.py  test_missing_data_handling.py  test_multi_entity_scoring.py  test_no_cross_repo_mutation.py  test_offline_sample_build.py  test_payload_schema.py  test_sample_data_warning.py  test_scoring_directionality.py  test_source_registry_schema.py  test_token_pricing_config.py
