[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-economics-cockpit"
version = "0.1.0"
description = "Deterministic cockpit for monitoring AI economics stress evidence."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.0",
  "pandas>=2.1",
  "pyarrow>=15",
  "pydantic>=2",
  "pyyaml>=6",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ai-economics-cockpit = "ai_economics_cockpit.cli:main"

[tool.setuptools.packages.find]
include = ["ai_economics_cockpit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
